# sinopvs

./: .gitignore  Backus.txt  CMakeLists.txt  CMakeLists.txt.GLVND  FSData.cpp  FSData.h  FlightSimulator.cpp  Interpreter.cpp  Interpreter.h  Renderer.cpp  Renderer.h  SinopQt.pro  Texture.cpp  Texture.h  aTODO.txt  backus.txt  calculator.cpp  calculator.h  helperfunctions.h  main.cpp  rpngenerator.cpp  runprogram.cpp  runprogram.h  source-meters-only.sin  source.sin  source240623.sin  source240626.sin  source3.sin  sourceProgram.sin  sourceTest.sin  sourceifthen.sin  sourceifthenelse.sin  sourcewhile.sin  tokengenerator.cpp  tokengenerator.h  utils.h  vartable.cpp  vartable.h  xample.txt
.cache/clangd/index/: FSData.cpp.454A96749971CB6F.idx  FSData.cpp.B272DEC7596C357C.idx  FSData.h.36464C1AC14439B2.idx  FSData.h.8237667D17D1DF0E.idx  FlightSimulator.cpp.5EC63A57CB44A485.idx  FlightSimulator.cpp.E82BFA9999912EB8.idx  FlightSimulator.h.0FBD5793A03D2633.idx  FlightSimulator.h.7F61B8F9E92C44BC.idx  RenderMath.h.6DB0F32D23B7F66C.idx  RenderMath.h.FF23FFA287934EE6.idx  Renderer.cpp.1CF3FFEF4AE6F622.idx  Renderer.cpp.27F305434A5EACD6.idx  Renderer.h.63643A71CBABD829.idx  Renderer.h.D0771F1ED5011CFC.idx  Texture.cpp.121F3839C2D607E4.idx  Texture.cpp.73202CDF14907FE2.idx  Texture.h.93C032B345D188B6.idx  Texture.h.B10860E7D6D1F956.idx  calculator.cpp.5F18254946D7F5DA.idx  calculator.cpp.857AE152C8F55AD3.idx  calculator.h.165486B8C6B0D036.idx  calculator.h.75E7FAED49EE5C8F.idx  helperfunctions.h.1A996949F92CEF89.idx  helperfunctions.h.EBDC926A04D26C18.idx  main.cpp.61FB47379C5852D7.idx  main.cpp.D8DA15DF7B9506A3.idx  rpngenerator.cpp.1B043292D00A6AE2.idx  rpngenerator.cpp.89DA04DD94069623.idx  rpngenerator.h.085391306D59364B.idx  rpngenerator.h.87F5192B5E55310D.idx  runprogram.cpp.24CD8D77193D5072.idx  runprogram.cpp.E51862334BA17571.idx  runprogram.h.6E7214970053F049.idx  runprogram.h.A0F0408ABA1B3F50.idx  tokengenerator.cpp.25A7CC8C12C9A807.idx  tokengenerator.cpp.CBF19A5EA94F61F1.idx  tokengenerator.h.0FCEBE35F5FF3052.idx  (+7 more)
scripts/: source240702.sin
